<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SQLiteWork"
    android:padding="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_name_base"
        android:layout_width="match_parent"
        android:hint="@string/edit_name"
        android:layout_height="50dp"/>
    <EditText
        android:id="@+id/edit_age_base"
        android:layout_width="match_parent"
        android:hint="@string/edit_age"
        android:layout_height="50dp"/>
    <Button
        android:onClick="addToBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_base"/>
    <Button
        android:id="@+id/read_base"
        android:onClick="readBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_base"/>
    <Button
        android:onClick="deleteBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_message"/>
    <TextView
        android:id="@+id/text_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ListView android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>